emu_tests/src/launch_0.stderr
error: unexpected kind of for loop
  --> $DIR/launch_0.rs:10:2
   |
10 |       for x in data {
   |  _____^
11 | |
12 | |     }
   | |_____^
